--- a/index9.html
+++ b/index9.html
@@ -238,9 +238,15 @@ async function run_selection() {
 	// -----------------------------------------
 	
 	// Run selections using UI_library.
-	const ffunction = module.UI_library();
-	var index_out = ffunction.run_multiple_selections(obj);
+
+	// Way 0
+	var index_out = module.UI_library.run_multiple_selections(obj);
 	console.log("index_out: ", index_out);
+	
+	// Way 1
+	// const ffunction = module.UI_library();
+	// var index_out = ffunction.run_multiple_selections(obj);
+	// console.log("index_out: ", index_out);
 	
 	// obj.htmlString = ffunction.run_multiple_selections(obj);
 
