--- a/index9.html
+++ b/index9.html
@@ -243,7 +243,7 @@ async function run_selection() {
 	// var index_out = module.UI_library(obj).run_multiple_selections(obj);
 	
 	// Way 1
-	const ffunction = module.UI_library(obj);
+	const ffunction = await module.UI_library(obj);
 	var index_out = ffunction.run_multiple_selections(obj);
 	
 	console.log("index_out: ", index_out);
