--- a/index9.html
+++ b/index9.html
@@ -179,49 +179,49 @@ async function run_selection() {
 	
 	if (document.getElementById("tab-right-box-shadow").checked == true) {
 		if (document.getElementById("tab-right-box-shadow_num").value.length > 0) {
-			ui_elements = Object.assign({}, ui_elements, {"tabs tab-right-box-shadow": Number(document.getElementById("tab-right-box-shadow_num").value)});
+			ui_elements = Object.assign({}, ui_elements, {"tab-right-box-shadow": Number(document.getElementById("tab-right-box-shadow_num").value)});
 		} else {
-			ui_elements = Object.assign({}, ui_elements, {"tabs tab-right-box-shadow": 1});
+			ui_elements = Object.assign({}, ui_elements, {"tab-right-box-shadow": 1});
 		}
 	}
 	
 	if (document.getElementById("tab-right").checked == true) {
 		if (document.getElementById("tab-right_num").value.length > 0) {
-			ui_elements = Object.assign({}, ui_elements, {"tabs tab-right": Number(document.getElementById("tab-right_num").value)});
+			ui_elements = Object.assign({}, ui_elements, {"tab-right": Number(document.getElementById("tab-right_num").value)});
 		} else {
-			ui_elements = Object.assign({}, ui_elements, {"tabs tab-right": 1});
+			ui_elements = Object.assign({}, ui_elements, {"tab-right": 1});
 		}
 	}
 	
 	if (document.getElementById("tab-left-box-shadow").checked == true) {
 		if (document.getElementById("tab-left-box-shadow_num").value.length > 0) {
-			ui_elements = Object.assign({}, ui_elements, {"tabs tab-left-box-shadow": Number(document.getElementById("tab-left-box-shadow_num").value)});
+			ui_elements = Object.assign({}, ui_elements, {"tab-left-box-shadow": Number(document.getElementById("tab-left-box-shadow_num").value)});
 		} else {
-			ui_elements = Object.assign({}, ui_elements, {"tabs tab-left-box-shadow": 1});
+			ui_elements = Object.assign({}, ui_elements, {"tab-left-box-shadow": 1});
 		}
 	}
 	
 	if (document.getElementById("tab-left").checked == true) {
 		if (document.getElementById("tab-left_num").value.length > 0) {
-			ui_elements = Object.assign({}, ui_elements, {"tabs tab-left": Number(document.getElementById("tab-left_num").value)});
+			ui_elements = Object.assign({}, ui_elements, {"tab-left": Number(document.getElementById("tab-left_num").value)});
 		} else {
-			ui_elements = Object.assign({}, ui_elements, {"tabs tab-left": 1});
+			ui_elements = Object.assign({}, ui_elements, {"tab-left": 1});
 		}
 	}
 	
 	if (document.getElementById("tab-round-box-shadow").checked == true) {
 		if (document.getElementById("tab-round-box-shadow_num").value.length > 0) {
-			ui_elements = Object.assign({}, ui_elements, {"tabs tab-round-box-shadow": Number(document.getElementById("tab-round-box-shadow_num").value)});
+			ui_elements = Object.assign({}, ui_elements, {"tab-round-box-shadow": Number(document.getElementById("tab-round-box-shadow_num").value)});
 		} else {
-			ui_elements = Object.assign({}, ui_elements, {"tabs tab-round-box-shadow": 1});
+			ui_elements = Object.assign({}, ui_elements, {"tab-round-box-shadow": 1});
 		}
 	}
 	
 	if (document.getElementById("tab-round").checked == true) {
 		if (document.getElementById("tab-round_num").value.length > 0) {
-			ui_elements = Object.assign({}, ui_elements, {"tabs tab-round": Number(document.getElementById("tab-round_num").value)});
+			ui_elements = Object.assign({}, ui_elements, {"tab-round": Number(document.getElementById("tab-round_num").value)});
 		} else {
-			ui_elements = Object.assign({}, ui_elements, {"tabs tab-round": 1});
+			ui_elements = Object.assign({}, ui_elements, {"tab-round": 1});
 		}
 	}
 
